--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,11 @@
 name = "iotdb-client-rs"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "Apache-2.0"
+readme = "README.md"
+description = "Rust client for apache iotdb"
+keywords = ["iotdb", "iotdb-client-rust"]
+repository = "https://github.com/manlge/iotdb-client-rs.git"
 
 [dependencies]
 thrift="0.15.0"
