--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ repository = "https://github.com/manlge/iotdb-client-rs.git"
 thrift="0.15.0"
 chrono="0.4.19"
 prettytable-rs = "0.8.0"
+permutation = "0.2.5"
