--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@
 [package]
 name = "iotdb-client-rs"
 version = "0.3.3"
+authors = ["Mark Liu <manlge168@gmial.com>"]
 edition = "2021"
 license = "Apache-2.0"
 readme = "README.md"
