rename lib name to iotdb

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@
 
 [package]
 name = "iotdb-client-rs"
-version = "0.3.4"
+version = "0.3.5"
 authors = ["Mark Liu <manlge168@gmial.com>"]
 edition = "2021"
 license = "Apache-2.0"
@@ -23,12 +23,16 @@ readme = "README.md"
 description = "Rust client library for Apache IoTDB"
 keywords = ["iotdb", "iotdb-client-rust", "apache-iotdb"]
 repository = "https://github.com/manlge/iotdb-client-rs.git"
-license-file = "LICENSE"
 categories = ["database"]
 documentation = "https://docs.rs/iotdb-client-rs"
 
-[dependencies]
-thrift="0.15.0"
+[lib]
+name = "iotdb"
+
+[dev-dependencies]
 chrono="0.4.19"
 prettytable-rs = "0.8.0"
+
+[dependencies]
+thrift="0.15.0"
 permutation = "0.2.5"
