--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ name = "iotdb"
 [dev-dependencies]
 chrono="0.4.19"
 prettytable-rs = "0.8.0"
+structopt = "0.3.25"
 
 [dependencies]
 thrift="0.15.0"
