--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,16 +24,19 @@ license = "Apache-2.0"
 name = "iotdb-client-rs"
 readme = "README.md"
 repository = "https://github.com/iotdb-lab/iotdb-client-rs.git"
-version = "0.3.11"
+version = "0.3.12"
 
 [lib]
 name = "iotdb"
 
 [dev-dependencies]
 chrono = "0.4.19"
-prettytable-rs = "0.8.0"
+prettytable-rs = "0.10.0"
 structopt = "0.3.26"
 
 [dependencies]
 permutation = "0.4.0"
-thrift = "0.15.0"
+strum_macros = "0.25.3"
+thrift = "0.17.0"
+typed-builder = "0.18.0"
+byteorder = "1.4"
